<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.funhausclicker.saxypandabear.funhausclicker.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banner"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="#000"/>
    <LinearLayout
        android:id="@+id/wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button style="?android:attr/buttonBarButtonStyle"
            android:text="@string/register"
            android:onClick="register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textColor="#ff7f00"
            android:id="@+id/register" />

        <Button style="?android:attr/buttonBarButtonStyle"
            android:text="@string/guest"
            android:onClick="guestAccessClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:textColor="#ff7f00"
            android:id="@+id/guest" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:text="@string/login"
        android:textColor="#ff7f00"
        android:textSize="20sp"
        android:padding="16dp"
        android:onClick="attemptLogin"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:text="@string/password"

        android:layout_alignBottom="@+id/login"
        android:layout_alignLeft="@+id/username"
        android:layout_alignStart="@+id/username"
        android:layout_marginBottom="61dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:text="@string/username"
        android:inputType="text"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
